--- a/Template/index.html
+++ b/Template/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
+    <link 
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Amazon</title>
 </head>
 <body>
@@ -16,13 +20,122 @@
             </div>
         </header>
         <main>
-            <ul>
-                <li>Product 1</li>
-                <li>Product 2</li>
-                <li>Product 3</li>
-                <li>Product 4</li>
-            </ul>
-
+            <div class="row center">
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size: 680px by 830px-->
+                        <img class="medium" src="./images/Product1.jpg" alt="product"/>
+                    </a>
+                    <div class="card body">
+                        <a href="product.html">
+                            <h2>Mutlu Olma Sanatı</h2>
+                        </a>
+                        <div class="rating" >
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                        </div>
+                        <div class="price">10 TL</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size: 680px by 830px-->
+                        <img class="medium" src="./images/Product1.jpg" alt="product"/>
+                    </a>
+                    <div class="card body">
+                        <a href="product.html">
+                            <h2>Mutlu Olma Sanatı</h2>
+                        </a>
+                        <div class="rating" >
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                        </div>
+                        <div class="price">10 TL</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size: 680px by 830px-->
+                        <img class="medium" src="./images/Product1.jpg" alt="product"/>
+                    </a>
+                    <div class="card body">
+                        <a href="product.html">
+                            <h2>Mutlu Olma Sanatı</h2>
+                        </a>
+                        <div class="rating" >
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                        </div>
+                        <div class="price">10 TL</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size: 680px by 830px-->
+                        <img class="medium" src="./images/Product1.jpg" alt="product"/>
+                    </a>
+                    <div class="card body">
+                        <a href="product.html">
+                            <h2>Mutlu Olma Sanatı</h2>
+                        </a>
+                        <div class="rating" >
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                        </div>
+                        <div class="price">10 TL</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size: 680px by 830px-->
+                        <img class="medium" src="./images/Product1.jpg" alt="product"/>
+                    </a>
+                    <div class="card body">
+                        <a href="product.html">
+                            <h2>Mutlu Olma Sanatı</h2>
+                        </a>
+                        <div class="rating" >
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                        </div>
+                        <div class="price">10 TL</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <a href="product.html">
+                        <!-- image size: 680px by 830px-->
+                        <img class="medium" src="./images/Product1.jpg" alt="product"/>
+                    </a>
+                    <div class="card body">
+                        <a href="product.html">
+                            <h2>Mutlu Olma Sanatı</h2>
+                        </a>
+                        <div class="rating" >
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star-3"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star"></i> </span>
+                            <span> <i class="fa fa-star-0"></i> </span>
+                        </div>
+                        <div class="price">10 TL</div>
+                    </div>
+                </div>
+            </div>  
         </main>
         <footer class="row center">All right reserved</footer>
     </div>
